fix(table): fix header's z-index to 60 when header is fixed(#INFR-6894)

--- a/src/table/styles/table.scss
+++ b/src/table/styles/table.scss
@@ -263,7 +263,7 @@
             }
         }
     }
-    
+
     // &.thy-table-bordered {
     //     border-radius: variables.$table-boxed-border-radius;
     //     border: variables.$table-border-width solid variables.$gray-200;
@@ -357,7 +357,7 @@
             position: sticky;
             left: 0;
             top: 0;
-            z-index: 1;
+            z-index: variables.$z-index-6;
         }
     }
 
